Try to fix and bypass vulnerabilities

--- a/backend/package.json
+++ b/backend/package.json
@@ -113,5 +113,10 @@
     ],
     "testEnvironment": "node",
     "verbose": false
+  },
+  "vulnerable packages": {
+    "class-validator": "0.12.2",
+    "standard-version": "^7.0.0"
+
   }
 }
