--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,9 @@ jobs:
     steps:
       - checkout
       - install_awscli
-      - install_nodejs
+      #- install_nodejs
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
@@ -263,7 +265,6 @@ jobs:
       - run:
           name: Fix migration vulnerabilities
           command: |
-            cd backend
             npm install
             # npm install oauth-sign@^0.9.0
             npm fund
