--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,6 +252,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm fund
             npm audit fix
             npm run migrations > migrations_dump.txt
             echo "migration successfully completed" >> migrations_dump.txt
