--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,8 @@ jobs:
             cd backend
             npm install
             npm fund
-            npm audit fix
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm run migrations > migrations_dump.txt
             echo "migration successfully completed" >> migrations_dump.txt
             cat migrations_dump.txt
